2007-04-10: Paul Varner <fuzzyray@gentoo.org>
	* equery: Change equery uses to command to display the best matching
	uninstalled package version if an uninstalled package is specified.
	Changed the meaning of -a to mean display all versions. (Bug #152325)

2007-04-01: Alec Warner <antarus@gentoo.org>
	* eread: Fix path and fully qualified paths (Bug #172969)

2007-03-31: Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix traceback in equery which (Bug #134053)

2007-03-29: Paul Varner <fuzzyray@gentoo.org>
	* gentoolkit: Change package.get_???_deps() methods to try the portage
	tree first, since emerge always uses the portage tree for dependencies.
	(Bug #164678)

2007-03-29: Paul Varner <fuzzyray@gentoo.org>
	* equery: Convert deprecated strings functions to str methods (Bug
	#172694)

2007-03-25: Paul Varner <fuzzyray@gentoo.org>
	* echangelog: Remove subversion/git patch due to many bugs.

2007-03-18 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Change --no-color to --nocolor for consistency
	within gentoolkit. (Bug #165165)

2007-03-16 Paul Varner <fuzzyray@gentoo.org>
	* gentoolkit: Fix typo in package.py (Bug #168347)

2007-03-15 Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix equery check to not fail for symlinks prefixed with ./
	(Bug #170702)

2007-03-14 Paul Varner <fuzzyray@gentoo.org>
	* equery: Trim trailing slash from query for equery belongs command
	(Bug #170981)

2007-03-13 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix bug with --package-names option not rebuilding
	packages (Bug #169761)

2007-03-10 Paul Varner <fuzzyray@gentoo.org>
	* equery: Add --depth option to equery depgraph to limit the depth of
	the dependency graph. (Bug #115807)

2007-03-09 Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Add support to detect "no version information
	available" message from ldd (Bug #169973)

2007-03-08 Paul Varner <fuzzyray@gentoo.org>
	* equery: Improved handling of KeyError in equery depends command
	(Bug #169929)
